package org.pintoschneider.void_of_the_unphatomable.ui;

public class Scene {
}
